@@ -812,6 +812,11 @@ Experimental: interface subject to change."
                                  (ash sb-vm:*static-space-free-pointer*
                                       sb-vm:n-fixnum-tag-bits))
                               :static)
+                             #+immobile-space
+                             ((< sb-vm:immobile-space-start addr
+                                 (ash sb-vm:*immobile-space-free-pointer*
+                                      sb-vm:n-fixnum-tag-bits))
+                              :immobile)
                              ((< (sb-kernel:current-dynamic-space-start) addr
                                  (sb-sys:sap-int (sb-kernel:dynamic-space-free-pointer)))
                               :dynamic))))
