@@ -15,6 +15,8 @@ changes relative to sbcl-1.3.20:
     misaligned tables for larger sizes or counts.
   * enhancement: ROOM reports on immobile space if applicable.
   * optimization: optimized external-format routines.
+  * bug fix: SB-INTROSPECT:ALLOCATION-INFORMATION returns :IMMOBILE
+    instead of :FOREIGN for objects in immobile space.
 
 changes in sbcl-1.3.20 relative to sbcl-1.3.19:
   * minor incompatible change: DEF{GENERIC,METHOD} no longer accept some
